[package]
name = "vrf-mod"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An extensible rust library for building VRF functionality with support for Elliptical Curve VRFs (secp256k1, secp256r1 curves)."
readme = "README.md"
repository = "https://github.com/th3outcast/vrf-mod"
keywords = ["cryptography", "vrf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10" }
bytes = "1.2.1"
thiserror = "1.0"
hex = "0.4.3"
hmac-sha256 = "1.1.4"

[dev-dependencies]
hex = "0.4.3"